--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
 
+    <!--favicon-->
+	<link rel="icon" href="favicon.ico">
+
     <style>
         header {
             width: 100%;
@@ -79,6 +82,9 @@
         ul {
             text-align: left;
         }
+        #headerimg{
+            max-width: 750px;
+        }
     </style>
 </head>
 
@@ -87,8 +93,7 @@
     <header>niconico Chrome拡張機能</header>
 
     <div class=logo-area>
-        <img id="ad" src="icon_live.png">
-        <h1>ニコニ広告ex.</h1>
+        <img id="headerimg" src="http_images/logo_header.png">
     </div>
 
     <p>ニコニコ動画・生放送ページのニコニ広告を<br>コメント欄に表示する拡張機能です。</p>
