add form iframe

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
 
     <!--favicon-->
-	<link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
 
     <style>
         header {
@@ -82,7 +82,8 @@
         ul {
             text-align: left;
         }
-        #headerimg{
+
+        #headerimg {
             max-width: 750px;
         }
     </style>
@@ -100,7 +101,7 @@
 
     <div class="info">
         <b>info</b>
-        <p>近日リリース！</p>
+        <p>19/12/20 リリースしました！</p>
     </div>
 
     <div class="main-area">
@@ -138,16 +139,9 @@
         <div class="form">
             <h3>お問い合わせ</h3>
             <h4>バグ・不具合などはこちらまでお願い致します。</h4>
-            <ul>
-                <li>Chromeウェブストア内 ニコニ広告ex.配布ページ</li>
-                <li><a href="https://twitter.com/nekozuki_2525">Twitter(@nekozuki_2525)</a></li>
-            </ul>
-            <h4>本拡張機能へのその他お問い合わせはこちらまでお願い致します。</h4>
-            <ul>
-                <li>メール：ayumu@nekozuki.me</li>
-                <li><a href="https://twitter.com/nekozuki_2525">TwitterDM：@nekozuki_2525</a></li>
-                <li>DiscordDM：猫月あゆむ#2525</li>
-            </ul>
+            <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSf2f4oBcd1aFAEZyGBcV5pIofYRXvm_rgkMiJqilocpSDE4DQ/viewform?embedded=true"
+                width="640" height="1179" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 
         </div>
 
