サイト修正

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     </div>
 
     <p>ニコニコ動画・生放送ページのニコニ広告を<br>コメント欄に表示する拡張機能です。</p>
+    <p style="font-size: 30px;"><a href="https://chrome.google.com/webstore/detail/%E3%83%8B%E3%82%B3%E3%83%8B%E5%BA%83%E5%91%8Aex/lfmmnpoacjifgojmhkegmhngbfhdjlmb">＞ DLはこちらから ＜</a></p>
 
     <div class="info">
         <b>info</b>
@@ -139,10 +140,11 @@
         <div class="form">
             <h3>お問い合わせ</h3>
             <h4>バグ・不具合などはこちらまでお願い致します。</h4>
+        </div>
+        <div class="gform">
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSf2f4oBcd1aFAEZyGBcV5pIofYRXvm_rgkMiJqilocpSDE4DQ/viewform?embedded=true"
-                width="640" height="1179" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
-
+                width="1000" height="1179" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
         </div>
 
     </div>
