--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <!--favicon-->
     <link rel="icon" href="favicon.ico">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154884607-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-154884607-1');
+    </script>
+
+
     <style>
         header {
             width: 100%;
@@ -98,7 +109,9 @@
     </div>
 
     <p>ニコニコ動画・生放送ページのニコニ広告を<br>コメント欄に表示する拡張機能です。</p>
-    <p style="font-size: 30px;"><a href="https://chrome.google.com/webstore/detail/%E3%83%8B%E3%82%B3%E3%83%8B%E5%BA%83%E5%91%8Aex/lfmmnpoacjifgojmhkegmhngbfhdjlmb">＞ DLはこちらから ＜</a></p>
+    <p style="font-size: 30px;"><a
+            href="https://chrome.google.com/webstore/detail/%E3%83%8B%E3%82%B3%E3%83%8B%E5%BA%83%E5%91%8Aex/lfmmnpoacjifgojmhkegmhngbfhdjlmb">＞
+            DLはこちらから ＜</a></p>
 
     <div class="info">
         <b>info</b>
