--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 こちらの対応までしばらくお待ちいただけますようお願い致します。</p>
         </div>
 
-        <div class="form">
+        <div class="form" id="form">
             <h3>お問い合わせ</h3>
             <h4>バグ・不具合などはこちらまでお願い致します。</h4>
         </div>
