--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <img class="imgpng" src="http_images/ima_nama.png">
         </div>
 
-        <div class="FAQ">
+        <div class="FAQ" id="faq">
             <h3>FAQ</h3>
 
             <h4>広告チケットを選んだあと、変更できない</h4>
