--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
         }
 
         .info {
+            width: 300px;
             padding-left: 14px;
+            padding: 10px;
             margin: 0 auto;
-            padding: 10px 100px;
             border: 2px dashed lightgray;
         }
 
@@ -97,6 +98,18 @@
         #headerimg {
             max-width: 750px;
         }
+
+        .index{
+            width: 300px;
+            padding-left: 14px;
+            margin: 0 auto;
+            padding: 10px;
+            border: 1.5px dotted lightgray;
+        }
+        .index_a{
+            color:blue;
+            text-decoration: underline
+        }
     </style>
 </head>
 
@@ -114,12 +127,21 @@
             DLはこちらから ＜</a></p>
 
     <div class="info">
-        <b>info</b>
+        <strong>お知らせ</strong>
         <p>19/12/20 リリースしました！</p>
     </div>
 
+    <p></p>
+
+    <div class="index">
+        <strong>目次</strong>
+        <p><a href="#howto" class="index_a">使い方</a></p>
+        <p><a href="#faq" class="index_a">FAQ</a></p>
+        <p><a href="#form" class="index_a">問い合わせ</a></p>
+    </div>
+
     <div class="main-area">
-        <div class="howto">
+        <div class="howto" id="howto">
             <h3>使い方</h3>
             <p>視聴ページを開き、アイコンに[ex.]がつくまで待ちます。(だいたい3秒)</p>
             <img class="imgpng" src="http_images/howto01.png">
@@ -150,14 +172,12 @@
                 こちらの対応までしばらくお待ちいただけますようお願い致します。</p>
         </div>
 
-        <div class="form" id="form">
+        <div class="gform" id="form">
             <h3>お問い合わせ</h3>
             <h4>バグ・不具合などはこちらまでお願い致します。</h4>
-        </div>
-        <div class="gform">
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSf2f4oBcd1aFAEZyGBcV5pIofYRXvm_rgkMiJqilocpSDE4DQ/viewform?embedded=true"
-                width="1000" height="1179" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+                width="1000" height="1190" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
         </div>
 
     </div>
