--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
             margin-top: auto;
         }
 
-        .info {
-            width: 300px;
+        .movie {
+            width: 1000px;
             padding-left: 14px;
             padding: 10px;
             margin: 0 auto;
-            border: 2px dashed lightgray;
         }
 
         .imgpng {
@@ -99,15 +98,16 @@
             max-width: 750px;
         }
 
-        .index{
+        .index {
             width: 300px;
             padding-left: 14px;
             margin: 0 auto;
             padding: 10px;
             border: 1.5px dotted lightgray;
         }
-        .index_a{
-            color:blue;
+
+        .index_a {
+            color: blue;
             text-decoration: underline
         }
     </style>
@@ -121,17 +121,16 @@
         <img id="headerimg" src="http_images/logo_header.png">
     </div>
 
-    <p>ニコニコ動画・生放送ページのニコニ広告を<br>コメント欄に表示する拡張機能です。</p>
-    <p style="font-size: 30px;"><a
+    <p>ニコニコ動画・生放送ページのニコニ広告を、コメント欄に表示する拡張機能です。<br>
+        <a style="font-size: 35px;" 
             href="https://chrome.google.com/webstore/detail/%E3%83%8B%E3%82%B3%E3%83%8B%E5%BA%83%E5%91%8Aex/lfmmnpoacjifgojmhkegmhngbfhdjlmb">＞
             DLはこちらから ＜</a></p>
 
-    <div class="info">
-        <strong>お知らせ</strong>
-        <p>19/12/20 リリースしました！</p>
+    <div class="movie">
+        <script type="application/javascript"
+            src="https://embed.nicovideo.jp/watch/sm36117230/script?w=720&h=480"></script><noscript><a
+                href="https://www.nicovideo.jp/watch/sm36117230">ニコニ広告をコメント欄に表示させるChrome拡張機能作ってみた！</a></noscript>
     </div>
-
-    <p></p>
 
     <div class="index">
         <strong>目次</strong>
@@ -184,7 +183,7 @@
 
     <footer>
         © 2019 AyumuNekozuki<br>
-        <a href="https://github.com/AyumuNekozuki/nicoad-ex.">Github</a>
+        <a href="https://qiita.com/nekozuki_2525/items/dda5679dc9eabf8a3f99">Qiita</a>　<a href="https://github.com/AyumuNekozuki/nicoad-ex.">Github</a>
     </footer>
 
 </body>
