--- a/index.html
+++ b/index.html
@@ -115,16 +115,20 @@
 
 <body>
 
-    <header>niconico Chrome拡張機能</header>
+    <header>Chrome FireFox 拡張機能</header>
 
     <div class=logo-area>
         <img id="headerimg" src="http_images/logo_header.png">
     </div>
 
     <p>ニコニコ動画・生放送ページのニコニ広告を、コメント欄に表示する拡張機能です。<br>
-        <a style="font-size: 35px;" 
-            href="https://chrome.google.com/webstore/detail/%E3%83%8B%E3%82%B3%E3%83%8B%E5%BA%83%E5%91%8Aex/lfmmnpoacjifgojmhkegmhngbfhdjlmb">＞
-            DLはこちらから ＜</a></p>
+        <a style="font-size: 25px;" 
+            href="https://chrome.google.com/webstore/detail/%E3%83%8B%E3%82%B3%E3%83%8B%E5%BA%83%E5%91%8Aex/lfmmnpoacjifgojmhkegmhngbfhdjlmb">
+            Chromeウェブストア</a>　
+            <a style="font-size: 25px; text-decoration:line-through;" 
+            href="">
+            FireFox Add-ons</a><span style="font-size: 18px;">※公開申請中</span>
+        </p>
 
     <div class="movie">
         <script type="application/javascript"
