--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
 
+    <meta name="description" content="ニコニコ動画・生放送ページのニコニ広告を、コメント欄に表示する拡張機能です。">
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@nekozuki_2525" />
+    <meta property="og:url" content="https://site.nekozuki.me/nicoad-ex" />
+    <meta property="og:title" content="ニコニ広告ex." />
+    <meta property="og:description" content="ニコニコ動画・生放送ページのニコニ広告を、コメント欄に表示する拡張機能です。" />
+    <meta property="og:type" content="website">
+
+
     <!--favicon-->
     <link rel="icon" href="favicon.ico">
 
