--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
         <a style="font-size: 25px;" 
             href="https://chrome.google.com/webstore/detail/%E3%83%8B%E3%82%B3%E3%83%8B%E5%BA%83%E5%91%8Aex/lfmmnpoacjifgojmhkegmhngbfhdjlmb">
             Chromeウェブストア</a>　
-            <a style="font-size: 25px; text-decoration:line-through;" 
-            href="">
-            FireFox Add-ons</a><span style="font-size: 18px;">※公開申請中</span>
+            <a style="font-size: 25px;" 
+            href="https://addons.mozilla.org/ja/firefox/addon/%E3%83%8B%E3%82%B3%E3%83%8B%E5%BA%83%E5%91%8Aex/">
+            FireFox Add-ons</a>
         </p>
 
     <div class="movie">
