--- a/popup_files/popup.html
+++ b/popup_files/popup.html
@@ -8,7 +8,7 @@
   <script src="jquery-3.4.1.min.js"></script>
   <style>
     body {
-      width: 350x;
+      width: 400px;
       text-align: center;
       background-color: #f4f4f4;
     }
@@ -21,7 +21,7 @@
       height: 22px;
     }
     .banar{
-      width: 125px;
+      width: 100px;
     }
 
     #iframe {
@@ -57,6 +57,7 @@
   <div id="menu">
     <button type="button" name="ticket" id="ticket"><img src="icon/ticket.png" class="banar" title="チケット"></button>
     <button type="button" name="info" id="info"><img src="icon/info.png" class="banar" title="広告INFO"></button>
+    <button type="button" name="exinfo" id="exinfo"><img src="icon/updateinfo.png" class="banar" title="広告ex.アップデートINFO"></button>
   </div>
 
   <div id="iframearea">
@@ -66,10 +67,8 @@
 
   <footer>
     <div id="linkarea">
-      <a class="olink" href=""><img src="../icon_video.png" class="icon" href="https://site.nekozuki.me/nicoad-ex" title="Website"></a>　
-      <a class="olink" href=""><img src="icon/github.png" class="icon" href="https://github.com/AyumuNekozuki/nicoad-ex." title="GitHub"></a>
+      　<b>ニコニ広告ex. ver1.1.0</b>
     </div>
-    Author : AyumuNekozuki
   </footer>
 </body>
 <script src="popup.js"></script>
