--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -32,29 +32,42 @@
 </head>
 
 <body>
-  <div id="headerbanar">
-    <h2>ver 1.1.0 更新情報</h2>
+  <div id="v111">
+    <h2>ver 1.1.1 更新情報</h2>
+    <div class="main">
+      <h3>バグ修正</h3>
+      <p style="text-align: left;">
+        ・本ページ下アイコン画像が表示されない不具合を修正しました。</p>
+    </div>
   </div>
-  <div id="main">
-    <h3>機能追加</h3>
-    <p style="text-align: left;">
-      ・ポップアップメニューを作成しました。<br>
-      　・広告ステータス、広告インフォ、アップデート情報を見ることができます。</p>
 
-    <h3>バグ修正</h3>
-    <p style="text-align: left;">
-      ・Ver1.0.1にて発生していたバグを修正しました。</p>
 
-    <h3>不具合情報</h3>
-    <p style="text-align: left;">
-      ・Chromeにて、広告ステータス・インフォ画面にて一部リンクがポップアップではなく、拡張画面で変わってしまうバグが確認されております。<br>
-      　・つきましては、バナー等のリンクは右クリック>新しいタブよりお願い致します。</p>
+  <div id="v110">
+    <div id="headerbanar">
+      <h2>ver 1.1.0 更新情報</h2>
+    </div>
+    <div class="main">
+      <h3>機能追加</h3>
+      <p style="text-align: left;">
+        ・ポップアップメニューを作成しました。<br>
+        　・広告ステータス、広告インフォ、アップデート情報を見ることができます。</p>
 
-    <p>その他バグ等ありましたら、<br>以下「ニコニ広告ex.」アイコンクリック、<br>リンク先ページよりご連絡下さい。</p style="text-align: left;">
+      <h3>バグ修正</h3>
+      <p style="text-align: left;">
+        ・Ver1.0.1にて発生していたバグを修正しました。</p>
+
+      <h3>不具合情報</h3>
+      <p style="text-align: left;">
+        ・Chromeにて、広告ステータス・インフォ画面にて一部リンクがポップアップではなく、拡張画面で変わってしまうバグが確認されております。<br>
+        　・つきましては、バナー等のリンクは右クリック>新しいタブよりお願い致します。</p>
+    </div>
+
+    <p style="text-align: left;">その他バグ等ありましたら、<br>以下「ニコニ広告ex.」アイコンクリック、<br>リンク先ページよりご連絡下さい。</p>
   </div>
+
 
   <footer>
-    <a class="olink" href="https://site.nekozuki.me/nicoad-ex" target="_blank"><img src="../icon_video.png" class="icon"
+    <a class="olink" href="https://site.nekozuki.me/nicoad-ex" target="_blank"><img src="icon/icon_video.png" class="icon"
         title="Website"></a>　
     <a class="olink" href="https://github.com/AyumuNekozuki/nicoad-ex." target="_blank"><img src="icon/github.png"
         class="icon" title="GitHub"></a>
