--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -28,11 +28,24 @@
       text-align: center;
       padding: 10px 0;
     }
+
+    .back{
+      display: none;
+    }
   </style>
 </head>
 
 <body>
-  <div id="v111">
+  <div id="v112">
+    <h2>ver 1.1.2 更新情報</h2>
+    <div class="main">
+      <h3>バグ修正</h3>
+      <p style="text-align: left;">
+        ・チャンネル動画で動作しない不具合を修正しました。</p>
+    </div>
+  </div>
+
+  <div id="v111" class="back">
     <h2>ver 1.1.1 更新情報</h2>
     <div class="main">
       <h3>バグ修正</h3>
@@ -42,7 +55,7 @@
   </div>
 
 
-  <div id="v110">
+  <div id="v110" class="back">
     <div id="headerbanar">
       <h2>ver 1.1.0 更新情報</h2>
     </div>
@@ -61,9 +74,13 @@
         ・Chromeにて、広告ステータス・インフォ画面にて一部リンクがポップアップではなく、拡張画面で変わってしまうバグが確認されております。<br>
         　・つきましては、バナー等のリンクは右クリック>新しいタブよりお願い致します。</p>
     </div>
-
-    <p style="text-align: left;">その他バグ等ありましたら、<br>以下「ニコニ広告ex.」アイコンクリック、<br>リンク先ページよりご連絡下さい。</p>
   </div>
+
+  <div id="fot">
+    <p style="text-align: center;">その他バグ等ありましたら、<br>以下「ニコニ広告ex.」アイコンクリック、<br>リンク先ページよりご連絡下さい。</p>
+  </div>
+
+  
 
 
   <footer>
