--- a/popup_files/popup.html
+++ b/popup_files/popup.html
@@ -46,6 +46,9 @@
       text-align: center;
       padding: 10px 0;
     }
+    .hide{
+      display: none;
+    }
   </style>
 </head>
 
@@ -61,13 +64,13 @@
   </div>
 
   <div id="iframearea">
-    <iframe id="iframe" src="https://nicoad.nicovideo.jp/my"></iframe>
+    <iframe id="iframe" src="update_info.html"></iframe>
   </div>
 
 
   <footer>
     <div id="linkarea">
-      　<b>ニコニ広告ex. ver1.1.2</b>
+      　<b>ニコニ広告ex. ver1.1.3</b>
     </div>
   </footer>
 </body>
