--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -11,7 +11,7 @@
     body {
       width: 375px;
       text-align: center;
-      background-color: #f4f4f4;
+      background-color: white;
     }
 
     .icon {
@@ -36,7 +36,34 @@
 </head>
 
 <body>
-  <div id="v112">
+  <div id="v114">
+    <h2>ver 1.1.4 更新情報</h2>
+    <div class="main">
+      <h3>不具合修正</h3>
+      <p style="text-align: left;">
+        ・ポップアップ画面からチケットの確認などが行えなかった不具合を修正しました。<br>
+        ・一部チャンネル動画（URLにsoID表記のない動画）でニコニ広告がポップアップで出てしまう不具合を修正しました。
+      </p>
+
+      <h3>軽微な修正</h3>
+      <p style="text-align: left;">
+        「ニコニ広告ex.」特設サイトのURLが変わったため、各所修正しました。<br>
+        新しいURLはコチラです。<br>
+        <a href="https://nekozuki.me/makes/nicoad-ex"  target="_blank">https://nekozuki.me/makes/nicoad-ex</a>
+      </p>
+    </div>
+  </div>
+
+  <div id="v113" class="back">
+    <h2>ver 1.1.3 更新情報</h2>
+    <div class="main">
+      <h3>不具合発生中のため一部機能を無効化</h3>
+      <p style="text-align: left;">
+        ・niconicoサイト側の仕様変更により、ポップアップ画面からチケットの確認などが行えなくなりました。</p>
+    </div>
+  </div>
+
+  <div id="v112" class="back">
     <h2>ver 1.1.2 更新情報</h2>
     <div class="main">
       <h3>バグ修正</h3>
@@ -77,16 +104,16 @@
   </div>
 
   <div id="fot">
-    <p style="text-align: center;">その他バグ等ありましたら、<br>以下「ニコニ広告ex.」アイコンクリック、<br>リンク先ページよりご連絡下さい。</p>
+    <p style="text-align: left;">その他バグ等ありましたら、以下「ニコニ広告ex.」アイコンクリック、リンク先ページよりご連絡下さい。</p>
   </div>
 
   
 
 
   <footer>
-    <a class="olink" href="https://site.nekozuki.me/nicoad-ex" target="_blank"><img src="icon/icon_video.png" class="icon"
+    <a class="olink" href="https://nekozuki.me/makes/nicoad-ex" target="_blank"><img src="icon/icon_video.png" class="icon"
         title="Website"></a>　
-    <a class="olink" href="https://github.com/AyumuNekozuki/nicoad-ex." target="_blank"><img src="icon/github.png"
+    <a class="olink" href="https://github.com/AyumuNekozuki/nicoad-ex" target="_blank"><img src="icon/github.png"
         class="icon" title="GitHub"></a>
   </footer>
 
