--- a/popup_files/popup.html
+++ b/popup_files/popup.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <script src="jquery-3.4.1.min.js"></script>
+  <script src="../jquery-3.5.1.min.js"></script>
   <style>
     body {
       width: 400px;
@@ -64,13 +64,12 @@
   </div>
 
   <div id="iframearea">
-    <iframe id="iframe" src="update_info.html"></iframe>
+    <iframe id="iframe" src="https://nicoad.nicovideo.jp/my#tickets"></iframe>
   </div>
-
 
   <footer>
     <div id="linkarea">
-      　<b>ニコニ広告ex. ver1.1.3</b>
+      　<b>ニコニ広告ex. ver1.2.0</b>
     </div>
   </footer>
 </body>
