--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -46,6 +46,26 @@
 </head>
 
 <body>
+  <div id="v122">
+    <h2>ver 1.2.2 更新情報</h2>
+    <h3>不具合修正</h3>
+    <ul>
+      <li>ポップアップ：Chromeにてチケット情報が確認できない・ふくびきが引けない不具合を修正</li>
+    </ul>
+    <h3>現在周知の不具合</h3>
+    <ul>
+      <li>動画：一部チャンネル動画で貢献度ランキング・広告履歴が表示されない不具合<br><a target="_blank"
+          href="https://github.com/AyumuNekozuki/nicoad-ex/issues/1">詳細はコチラ</a>
+      </li>
+      <li>動画：Firefox 76.x にて動画スクリプトが動作しない不具合<br><a target="_blank"
+        href="https://github.com/AyumuNekozuki/nicoad-ex/issues/6">Firefoxのアップデートを行うと解消します（詳細）</a>
+      </li>
+    </ul>
+    <h3>その他修正</h3>
+    <ul>
+      <li>生放送：「niconico Darkmode」拡張実行時にダークモード化するよう対応（ヘッダー部分のみ）</li>
+    </ul>
+  </div>
   <div id="v121">
     <h2>ver 1.2.1 更新情報</h2>
     <h3>機能改善</h3>
