--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -46,7 +46,20 @@
 </head>
 
 <body>
-  <div id="v122">
+  <div id="v123">
+    <h2>ver 1.2.3 更新情報</h2>
+    <h3>仕様変更</h3>
+    <ul>
+      <li>ポップアップ：『インフォ・福引』ボタンの移動先を変更しました</li>
+    </ul>
+    <h3>不具合修正</h3>
+    <ul>
+      <li>動画：いいね！機能のアップデートの影響で表示が崩れる不具合</li>
+      <li>生放送：URLが live.nicovideo.jp のとき動作しない不具合</li>
+    </ul>
+  </div>
+
+  <div id="v122" class="back">
     <h2>ver 1.2.2 更新情報</h2>
     <h3>不具合修正</h3>
     <ul>
@@ -66,7 +79,8 @@
       <li>生放送：「niconico Darkmode」拡張実行時にダークモード化するよう対応（ヘッダー部分のみ）</li>
     </ul>
   </div>
-  <div id="v121">
+
+  <div id="v121" class="back">
     <h2>ver 1.2.1 更新情報</h2>
     <h3>機能改善</h3>
     <ul>
@@ -87,7 +101,7 @@
     </li>
     </ul>
   </div>
-  <div id="v120">
+  <div id="v120" class="back">
     <h2>ver 1.2.0 更新情報</h2>
     <div class="main">
       <h3>機能改善</h3>
