バージョン更新,更新情報popupのデザインを修正,popupに表示されるバージョンを自動取得するように,Feedbackリンクを追加

--- a/popup_files/popup.html
+++ b/popup_files/popup.html
@@ -46,6 +46,20 @@
       text-align: center;
       padding: 10px 0;
     }
+    footer .foot_links{
+      display: inline-block;
+      margin: auto 10px;
+    }
+    footer p{
+      font-weight: bold;
+    }
+    footer a{
+      color: #0080ff;
+      text-decoration: underline;
+    }
+    footer a:hover{
+      text-decoration: none;
+    }
     .hide{
       display: none;
     }
@@ -68,9 +82,10 @@
   </div>
 
   <footer>
-    <div id="linkarea">
-      　<b>ニコニ広告ex. ver1.2.3</b>
-    </div>
+    <p id="ex_version" class="foot_links">
+      
+    </p>
+    <a class="foot_links" href="https://forms.gle/stDfy9C48WMsEAG39" target="_blank">Feedback</a>
   </footer>
 </body>
 <script src="popup.js"></script>
