--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -10,8 +10,16 @@
   <style>
     body {
       width: 375px;
-      text-align: center;
       background-color: white;
+    }
+
+    h2{
+      text-align: center;
+    }
+    h3{
+      padding-left: 10px;
+      border-left: 5px solid #FF914B;
+      border-bottom: 2px solid #FF914B;
     }
 
     .icon {
@@ -30,7 +38,7 @@
     }
 
     ul {
-      margin-left: 1em;
+      margin-left: 2em;
       padding-left: 0;
     }
 
@@ -47,168 +55,21 @@
 
 <body>
   <div id="v123">
-    <h2>ver 1.2.3 更新情報</h2>
+    <h2>ver 1.2.4 更新情報</h2>
+    <h3>不具合修正</h3>
+    <ul>
+      <li>生放送：拡張機能が動作しなくなっていた不具合を修正</li>
+    </ul>
     <h3>仕様変更</h3>
     <ul>
-      <li>ポップアップ：『インフォ・福引』ボタンの移動先を変更しました</li>
-    </ul>
-    <h3>不具合修正</h3>
-    <ul>
-      <li>動画：いいね！機能のアップデートの影響で表示が崩れる不具合</li>
-      <li>生放送：URLが live.nicovideo.jp のとき動作しない不具合</li>
-    </ul>
-  </div>
-
-  <div id="v122" class="back">
-    <h2>ver 1.2.2 更新情報</h2>
-    <h3>不具合修正</h3>
-    <ul>
-      <li>ポップアップ：Chromeにてチケット情報が確認できない・ふくびきが引けない不具合を修正</li>
-    </ul>
-    <h3>現在周知の不具合</h3>
-    <ul>
-      <li>動画：一部チャンネル動画で貢献度ランキング・広告履歴が表示されない不具合<br><a target="_blank"
-          href="https://github.com/AyumuNekozuki/nicoad-ex/issues/1">詳細はコチラ</a>
-      </li>
-      <li>動画：Firefox 76.x にて動画スクリプトが動作しない不具合<br><a target="_blank"
-        href="https://github.com/AyumuNekozuki/nicoad-ex/issues/6">Firefoxのアップデートを行うと解消します（詳細）</a>
+      <li>DeveloperConsoleに大量のログが流れないようにしました
       </li>
     </ul>
-    <h3>その他修正</h3>
-    <ul>
-      <li>生放送：「niconico Darkmode」拡張実行時にダークモード化するよう対応（ヘッダー部分のみ）</li>
-    </ul>
-  </div>
-
-  <div id="v121" class="back">
-    <h2>ver 1.2.1 更新情報</h2>
-    <h3>機能改善</h3>
-    <ul>
-      <li>動画IDが "nl" など、soではない公式動画IDに対応しました。</li>
-    </ul>
-    <h3>不具合修正</h3>
-    <ul>
-      <li>動画：Firefoxにてボタンが正常に作成されない不具合</li>
-      <li>動画：通信速度が遅い場合に、ページの読み込み終了よりも拡張機能が先に実行されてしまいボタンが作成されない不具合</li>
-    </ul>
-    <h3>現在周知の不具合</h3>
-    <ul>
-      <li>動画：一部チャンネル動画で貢献度ランキング・広告履歴が表示されない不具合<br><a target="_blank"
-          href="https://github.com/AyumuNekozuki/nicoad-ex/issues/1">詳細はコチラ</a>
-      </li>
-      <li>動画：Firefox 76.x にて動画スクリプトが動作しない不具合<br><a target="_blank"
-        href="https://github.com/AyumuNekozuki/nicoad-ex/issues/6">Firefoxのアップデートを行うと解消します（詳細）</a>
-    </li>
-    </ul>
-  </div>
-  <div id="v120" class="back">
-    <h2>ver 1.2.0 更新情報</h2>
-    <div class="main">
-      <h3>機能改善</h3>
-      <ul>
-        <li>拡張機能のボタンをわかりやすくしました。</li>
-        <li>生放送：閉じるボタンを押しやすくしました。</li>
-      </ul>
-      <h3>不具合修正</h3>
-      <ul>
-        <li>生放送：一部公式番組でフルスク解除時に表示崩れが起きる不具合を修正</li>
-        <li>生放送：正常な状態で意図せずエラーログが表示されてしまう不具合を修正</li>
-      </ul>
-      <h3>細かい修正</h3>
-      <ul>
-        <li>動画：各所デザインのズレを修正しました。</li>
-        <li>生放送：エラーログを5秒後に自動で閉じるようにしました。</li>
-      </ul>
-      <h3>裏側の修正</h3>
-      <ul>
-        <li>スクリプトを全て見直しました。</li>
-        <li>スクリプトを軽量化しました。</li>
-      </ul>
-      <h3>現在周知の不具合</h3>
-      <ul>
-        <li>動画：一部チャンネル動画で貢献度ランキング・広告履歴が表示されない不具合：<a target="_blank"
-            href="https://github.com/AyumuNekozuki/nicoad-ex/issues/1">詳細はコチラ</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div id="v114" class="back">
-    <h2>ver 1.1.4 更新情報</h2>
-    <div class="main">
-      <h3>不具合修正</h3>
-      <p style="text-align: left;">
-        ・ポップアップ画面からチケットの確認などが行えなかった不具合を修正しました。<br>
-        ・一部チャンネル動画（URLにsoID表記のない動画）でニコニ広告がポップアップで出てしまう不具合を修正しました。
-      </p>
-
-      <h3>軽微な修正</h3>
-      <p style="text-align: left;">
-        「ニコニ広告ex.」特設サイトのURLが変わったため、各所修正しました。<br>
-        新しいURLはコチラです。<br>
-        <a href="https://nekozuki.me/makes/nicoad-ex" target="_blank">https://nekozuki.me/makes/nicoad-ex</a>
-      </p>
-    </div>
-  </div>
-
-  <div id="v113" class="back">
-    <h2>ver 1.1.3 更新情報</h2>
-    <div class="main">
-      <h3>不具合発生中のため一部機能を無効化</h3>
-      <p style="text-align: left;">
-        ・niconicoサイト側の仕様変更により、ポップアップ画面からチケットの確認などが行えなくなりました。</p>
-    </div>
-  </div>
-
-  <div id="v112" class="back">
-    <h2>ver 1.1.2 更新情報</h2>
-    <div class="main">
-      <h3>バグ修正</h3>
-      <p style="text-align: left;">
-        ・チャンネル動画で動作しない不具合を修正しました。</p>
-    </div>
-  </div>
-
-  <div id="v111" class="back">
-    <h2>ver 1.1.1 更新情報</h2>
-    <div class="main">
-      <h3>バグ修正</h3>
-      <p style="text-align: left;">
-        ・本ページ下アイコン画像が表示されない不具合を修正しました。</p>
-    </div>
-  </div>
-
-
-  <div id="v110" class="back">
-    <div id="headerbanar">
-      <h2>ver 1.1.0 更新情報</h2>
-    </div>
-    <div class="main">
-      <h3>機能追加</h3>
-      <p style="text-align: left;">
-        ・ポップアップメニューを作成しました。<br>
-        　・広告ステータス、広告インフォ、アップデート情報を見ることができます。</p>
-
-      <h3>バグ修正</h3>
-      <p style="text-align: left;">
-        ・Ver1.0.1にて発生していたバグを修正しました。</p>
-
-      <h3>不具合情報</h3>
-      <p style="text-align: left;">
-        ・Chromeにて、広告ステータス・インフォ画面にて一部リンクがポップアップではなく、拡張画面で変わってしまうバグが確認されております。<br>
-        　・つきましては、バナー等のリンクは右クリック>新しいタブよりお願い致します。</p>
-    </div>
-  </div>
-
-  <div id="fot">
-    <p style="text-align: left;">その他バグ等ありましたら、以下「ニコニ広告ex.」アイコンクリック、リンク先ページよりご連絡下さい。</p>
   </div>
 
   <footer>
-    <a class="olink" href="https://nekozuki.me/makes/nicoad-ex" target="_blank"><img src="icon/icon_video.png"
-        class="icon" title="Website"></a>　
-    <a class="olink" href="https://github.com/AyumuNekozuki/nicoad-ex" target="_blank"><img src="icon/github.png"
-        class="icon" title="GitHub"></a>
+    <a class="olink" href="https://forms.gle/stDfy9C48WMsEAG39" target="_blank">Feedback</a>　
+    <a class="olink" href="https://github.com/AyumuNekozuki/nicoad-ex" target="_blank">GitHub</a>
   </footer>
 
   <script src="popup.js"></script>
