--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -54,18 +54,22 @@
 </head>
 
 <body>
-  <div id="v123">
-    <h2>ver 1.2.4 更新情報</h2>
-    <h3>不具合修正</h3>
+  <div id="v125">
+    <h2>ver 1.2.5 更新情報</h2>
+    <h3>機能追加</h3>
     <ul>
-      <li>生放送：拡張機能が動作しなくなっていた不具合を修正</li>
+      <li>「<a href="https://blog.nekozuki.me/nl33/" target="_blank" rel="noopener noreferrer">ニコニ広告ex. v2.0.0アップデートのお知らせ</a>」リンクを追記しました。</li>
     </ul>
-    <h3>仕様変更</h3>
-    <ul>
-      <li>DeveloperConsoleに大量のログが流れないようにしました
-      </li>
-    </ul>
+    <h3>v2.0.0について</h3>
+    <p>新サービス「ニコニ貢献」に対応する他、ロゴ・アイコン・デザイン変更などを行います。</p>
+    <p>詳細は上リンクをご確認ください。</p>
+
+    <h3>ニコニ貢献について</h3>
+    <p><a href="https://blog.nicovideo.jp/niconews/152442.html" target="_blank" rel="noopener noreferrer">ニコニコインフォ</a>で告知があったように、2021/06/09に、現在の「ニコニ広告＋ギフト」が終了し、「ニコニ貢献」に統合されます。</p>
+    <p>「ニコニ貢献」リリース後、当拡張機能の一部機能が使えなくなることが予想されますが、当日中（遅くても翌日中）には修正版（v2.0.0）をリリースしますので気長にお待ちいただけると幸いです。</p>
+    <p>また「ニコニ貢献」リリース関連による不具合等の報告は不要です。</p>
   </div>
+
 
   <footer>
     <a class="olink" href="https://forms.gle/stDfy9C48WMsEAG39" target="_blank">Feedback</a>　
