ニコニ貢献に対応

--- a/popup_files/popup.html
+++ b/popup_files/popup.html
@@ -23,13 +23,13 @@
     <ul></button>
       <li><button id="page_ticket" class="navbut active">チケット</button></li>
       <li><button id="page_hukubiki" class="navbut">ふくびき</button></li>
-      <li><button id="page_thanks" class="navbut">感謝</button></li>
+      <li><button id="page_kouken" class="navbut">貢献</button></li>
       <li><button id="page_update" class="navbut">更新情報</button></li>
     </ul>
   </nav>
 
   <main id="iframe_area">
-    <iframe id="iframe" src="https://nicoad.nicovideo.jp/my#tickets"></iframe>
+    <iframe id="iframe" src="https://koken.nicovideo.jp/ticket"></iframe>
   </main>
 
   <footer>
