--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -15,21 +15,38 @@
 </head>
 
 <body>
-  <h2>ver 1.2.5 更新情報</h2>
+  <h2>ver 2.0.0 更新情報</h2>
   
   <main class="update_contents">
+    <h3>変更点</h3>
+    <ul>
+      <li>「ニコニ広告ex.」ロゴ・アイコン・デザインをリニューアルしました。<br>
+        <img src="https://blog.nekozuki.me/img/nl33/change_logo.png" alt="新旧比較" srcset="">
+      </li>
+    </ul>
     <h3>機能追加</h3>
     <ul>
-      <li>「<a href="https://blog.nekozuki.me/nl33/" target="_blank" rel="noopener noreferrer">ニコニ広告ex. v2.0.0アップデートのお知らせ</a>」リンクを追記しました。</li>
+      <li>新サービス「<a href="https://koken.nicovideo.jp" target="_blank" rel="noopener noreferrer">ニコニ貢献</a>」に対応しました。上部タブ「貢献」から確認できます。</li>
     </ul>
-    <h3>v2.0.0について</h3>
-    <p>新サービス「ニコニ貢献」に対応する他、ロゴ・アイコン・デザイン変更などを行います。</p>
-    <p>詳細は上リンクをご確認ください。</p>
-
-    <h3>ニコニ貢献について</h3>
-    <p><a href="https://blog.nicovideo.jp/niconews/152442.html" target="_blank" rel="noopener noreferrer">ニコニコインフォ</a>で告知があったように、2021/06/09に、現在の「ニコニ広告＋ギフト」が終了し、「ニコニ貢献」に統合されます。</p>
-    <p>「ニコニ貢献」リリース後、当拡張機能の一部機能が使えなくなることが予想されますが、当日中（遅くても翌日中）には修正版（v2.0.0）をリリースしますので気長にお待ちいただけると幸いです。</p>
-    <p>また「ニコニ貢献」リリース関連による不具合等の報告は不要です。</p>
+    <h3>修正点</h3>
+    <ul>
+      <li>ニコニ貢献リリースに伴いズレてしまったチケットページのURLを修正しました。</li>
+    </ul>
+    <h3>Q&A</h3>
+    <ul>
+      <li>
+        Q: 視聴ページのコメント欄で広告できる機能は…<br>
+        A: 変更ありません。これまで通りお使い頂けます。
+      </li>
+      <li>
+        Q: 貢献度やランクはどこで確認するの？<br>
+        A: 貢献タブをクリック→サポーターページで確認できます。
+      </li>
+      <li>
+        Q: 拡張機能内で「感謝」したいんだけど<br>
+        A: 貢献タブをクリック→クリエイターページで行えます。
+      </li>
+    </ul>
   </main>
 
 
