リリース処理

--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -15,37 +15,17 @@
 </head>
 
 <body>
-  <h2>ver 2.0.0 更新情報</h2>
+  <h2>ver 2.0.1 更新情報</h2>
   
   <main class="update_contents">
-    <h3>変更点</h3>
-    <ul>
-      <li>「ニコニ広告ex.」ロゴ・アイコン・デザインをリニューアルしました。<br>
-        <img src="https://blog.nekozuki.me/img/nl33/change_logo.png" alt="新旧比較" srcset="">
-      </li>
-    </ul>
-    <h3>機能追加</h3>
-    <ul>
-      <li>新サービス「<a href="https://koken.nicovideo.jp" target="_blank" rel="noopener noreferrer">ニコニ貢献</a>」に対応しました。上部タブ「貢献」から確認できます。</li>
-    </ul>
     <h3>修正点</h3>
     <ul>
-      <li>ニコニ貢献リリースに伴いズレてしまったチケットページのURLを修正しました。</li>
+      <li>ニコ生のコメント欄と映像の間に、広告画面がにょきっと表示されるようになってしまった問題を修正しました。</li>
+      <li>Windows環境下でポップアップメニューのフォントがガビガビになる問題を修正しました（たぶん）</li>
     </ul>
-    <h3>Q&A</h3>
+    <h3>裏側の修正（開発者向け）</h3>
     <ul>
-      <li>
-        Q: 視聴ページのコメント欄で広告できる機能は…<br>
-        A: 変更ありません。これまで通りお使い頂けます。
-      </li>
-      <li>
-        Q: 貢献度やランクはどこで確認するの？<br>
-        A: 貢献タブをクリック→サポーターページで確認できます。
-      </li>
-      <li>
-        Q: 拡張機能内で「感謝」したいんだけど<br>
-        A: 貢献タブをクリック→クリエイターページで行えます。
-      </li>
+      <li>生放送：拡張機能で作成される要素のCSSファイルを別ファイルとしてまとめました</li>
     </ul>
   </main>
 
