--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -15,18 +15,25 @@
 </head>
 
 <body>
-  <h2>ver 2.0.1 更新情報</h2>
+  <h2>ver 2.0.2 更新情報</h2>
   
   <main class="update_contents">
     <h3>修正点</h3>
     <ul>
-      <li>ニコ生のコメント欄と映像の間に、広告画面がにょきっと表示されるようになってしまった問題を修正しました。</li>
-      <li>Windows環境下でポップアップメニューのフォントがガビガビになる問題を修正しました（たぶん）</li>
+      <li>生放送：ニコニ広告画面を表示させた状態で、フルスクリーンモードを行き来すると変な空間が生まれたり、コメント欄が消える問題を修正しました。</li>
     </ul>
-    <h3>裏側の修正（開発者向け）</h3>
+    <h3>現時点で確認済みの問題（追加分）</h3>
+    <p>ポップアップメニュー内のニコニコ画面にある、ヘッダーのベルボタンを押すと、以下のエラーが発生します。</p>
     <ul>
-      <li>生放送：拡張機能で作成される要素のCSSファイルを別ファイルとしてまとめました</li>
+      <li>お知らせ内容が取得できない</li>
+      <li>ベルボタンを再度押してもお知らせ画面を閉じることができない</li>
     </ul>
+    <p>
+      以上の問題について、セキュリティなどの面もあり、修正が難しい状態です。
+    </p>
+    <p>
+      大変申し訳ありませんが、ポップアップメニュー内での「お知らせ」機能閲覧はお控えいただければ幸いです。よろしくお願い致します。
+    </p>
   </main>
 
 
