拡張機能内の更新情報を更新

--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -15,27 +15,23 @@
 </head>
 
 <body>
-  <h2>ver 2.0.2 更新情報</h2>
+  <h2>ver 2.1.0 更新情報</h2>
   
   <main class="update_contents">
+    <h3>対応サービスが増えました！</h3>
+    <ul>
+      <li>ニコニコ大百科に対応しました。</li>
+      <li>ニコニコ静画（イラスト）に対応しました。</li>
+      <li>ニコニ立体に対応しました。</li>
+    </ul>
+    <p>※ゲームアツマールについては、アツマール側にバグが有ったため、その修正を確認した後に実装します。</p>
+
     <h3>修正点</h3>
     <ul>
-      <li>生放送：ニコニ広告画面を表示させた状態で、フルスクリーンモードを行き来すると変な空間が生まれたり、コメント欄が消える問題を修正しました。</li>
+      <li>動画：『リストに登録（マイリスト登録画面）』→『ニコニ広告ex.』→『リストに登録』の順にクリックすると動画プレイヤーがクラッシュする問題を修正しました。(SpecialThanks: @Thiroaki)</li>
+      <li>動画：広告画面表示時に『▲』の位置がズレていた問題を修正しました。(SpecialThanks: @Thiroaki)</li>
     </ul>
-    <h3>現時点で確認済みの問題（追加分）</h3>
-    <p>ポップアップメニュー内のニコニコ画面にある、ヘッダーのベルボタンを押すと、以下のエラーが発生します。</p>
-    <ul>
-      <li>お知らせ内容が取得できない</li>
-      <li>ベルボタンを再度押してもお知らせ画面を閉じることができない</li>
-    </ul>
-    <p>
-      以上の問題について、セキュリティなどの面もあり、修正が難しい状態です。
-    </p>
-    <p>
-      大変申し訳ありませんが、ポップアップメニュー内での「お知らせ」機能閲覧はお控えいただければ幸いです。よろしくお願い致します。
-    </p>
   </main>
-
 
   <footer>
     <a class="olink" href="https://forms.gle/stDfy9C48WMsEAG39" target="_blank">Feedback</a>　
