--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -15,21 +15,13 @@
 </head>
 
 <body>
-  <h2>ver 2.1.0 更新情報</h2>
+  <h2>ver 2.1.1 更新情報</h2>
   
   <main class="update_contents">
-    <h3>対応サービスが増えました！</h3>
-    <ul>
-      <li>ニコニコ大百科に対応しました。</li>
-      <li>ニコニコ静画（イラスト）に対応しました。</li>
-      <li>ニコニ立体に対応しました。</li>
-    </ul>
-    <p>※ゲームアツマールについては、アツマール側にバグが有ったため、その修正を確認した後に実装します。</p>
-
     <h3>修正点</h3>
     <ul>
-      <li>動画：『リストに登録（マイリスト登録画面）』→『ニコニ広告ex.』→『リストに登録』の順にクリックすると動画プレイヤーがクラッシュする問題を修正しました。(SpecialThanks: @Thiroaki)</li>
-      <li>動画：広告画面表示時に『▲』の位置がズレていた問題を修正しました。(SpecialThanks: @Thiroaki)</li>
+      <li>オーバーレイ型広告画面を開いたときに、ブラウザのヒストリーに広告画面のURLが残ってしまう問題を修正</li>
+      <li>立体サイト内移動をした場合、ページがリロードされない為、ボタンの置き換えや広告画面などがうまく動かない問題を修正</li>
     </ul>
   </main>
 
