--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -15,13 +15,17 @@
 </head>
 
 <body>
-  <h2>ver 2.1.1 更新情報</h2>
+  <h2>ver 2.1.2 更新情報</h2>
   
   <main class="update_contents">
     <h3>修正点</h3>
     <ul>
-      <li>オーバーレイ型広告画面を開いたときに、ブラウザのヒストリーに広告画面のURLが残ってしまう問題を修正</li>
-      <li>立体サイト内移動をした場合、ページがリロードされない為、ボタンの置き換えや広告画面などがうまく動かない問題を修正</li>
+      <li>【生放送】ニコニ広告ボタンが消えてしまう不具合を修正</li>
+      <li>【生放送】ニコニ広告画面を閉じたときにシアターモードっぽくなってしまう不具合を修正</li>
+    </ul>
+    <h3>開発者向け変更点</h3>
+    <ul>
+      <li>動画ページで実行するスクリプトと生放送ページで実行するスクリプトでファイルを２つに分けました。</li>
     </ul>
   </main>
 
