福引ページを新タブで開くように

--- a/popup_files/popup.html
+++ b/popup_files/popup.html
@@ -29,7 +29,7 @@
   </nav>
 
   <main id="iframe_area">
-    <iframe id="iframe" src="https://koken.nicovideo.jp/ticket"></iframe>
+    <iframe id="iframe" src="https://koken.nicovideo.jp/ticket?nicoadex"></iframe>
   </main>
 
   <footer>
