--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -18,21 +18,24 @@
   <h2>ver 2.1.3 更新情報</h2>
   
   <main class="update_contents">
-    <h3>修正点</h3>
+    <h3>ポップアップ画面修正点</h3>
     <ul>
-      <li>【生放送】ニコニ広告ボタンが消えてしまう不具合を修正</li>
-      <li>【生放送】ニコニ広告画面を閉じたときにシアターモードっぽくなってしまう不具合を修正</li>
+      <li>【ふくびき】公式のキャンペーン一覧ページに接続できない＆バナー画像が取得できないため、<br>
+        テキストのみですがキャンペーン一覧ページを仮作成しました。</li>
+      <li>【チケット】ポップアップ画面で福引ができなくなったので、新しいタブで開くようにしました。</li>
     </ul>
-    <h3>開発者向け変更点</h3>
+    <h3>大百科修正点</h3>
     <ul>
-      <li>動画ページで実行するスクリプトと生放送ページで実行するスクリプトでファイルを２つに分けました。</li>
+      <li>広告未対応のページ(大百科TOP/お絵カキコなど)で右上ボタンが表示されないようにしました。<br>
+        <small>※同時に要望いただいていた掲示板画面での広告については、画面内で記事IDが取得できないため、現在どう実装するか検討中です。</small>
+      </li>
     </ul>
   </main>
 
   <footer>
     <a class="olink" href="https://forms.gle/stDfy9C48WMsEAG39" target="_blank">Feedback</a>　
     <a class="olink" href="https://github.com/AyumuNekozuki/nicoad-ex" target="_blank">GitHub</a>
-    <small>©2019-2021 AyumuNekozuki</small>
+    <small>©2019-2022 AyumuNekozuki</small>
   </footer>
 
   <script src="popup.js"></script>
