--- a/popup_files/update_info.html
+++ b/popup_files/update_info.html
@@ -15,20 +15,14 @@
 </head>
 
 <body>
-  <h2>ver 2.1.3 更新情報</h2>
+  <h2>ver 2.1.4 更新情報</h2>
   
   <main class="update_contents">
-    <h3>ポップアップ画面修正点</h3>
+    <h3>生放送修正点</h3>
     <ul>
-      <li>【ふくびき】公式のキャンペーン一覧ページに接続できない＆バナー画像が取得できないため、<br>
-        テキストのみですがキャンペーン一覧ページを仮作成しました。</li>
-      <li>【チケット】ポップアップ画面で福引ができなくなったので、新しいタブで開くようにしました。</li>
-    </ul>
-    <h3>大百科修正点</h3>
-    <ul>
-      <li>広告未対応のページ(大百科TOP/お絵カキコなど)で右上ボタンが表示されないようにしました。<br>
-        <small>※同時に要望いただいていた掲示板画面での広告については、画面内で記事IDが取得できないため、現在どう実装するか検討中です。</small>
-      </li>
+      <li>広告画面を開いたのち、再度同じボタンを押すと、画面が消えるようにしました。</li>
+      <li>公式側の変更により、動作しなくなっていた問題を修正しました。</li>
+      <li>今後、公式側に変更があっても不具合が発生しないよう、スクリプトを調整しました。</li>
     </ul>
   </main>
 
